css/main.css
@import '404.css';

/* NEWLY INTRODUCED BUTTON BTN-PANTONE!!! */

      .btn-pantone {
        color: #fff;
        background-color: #FF6F61;
        border-color: #fff; }
        .btn-pantone:hover {
          color: #FF6F61;
          background-color: #fff;
          border-color: #FF6F61; }
        .btn-pantone:focus, .btn-pantone.focus {
          box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5); }
        .btn-pantone.disabled, .btn-pantone:disabled {
          color: #fff;
          background-color: #dc3545;
          border-color: #dc3545; }
        .btn-pantone:not(:disabled):not(.disabled):active, .btn-pantone:not(:disabled):not(.disabled).active,
        .show > .btn-dpantone.dropdown-toggle {
          color: #fff;
          background-color: #bd2130;
          border-color: #b21f2d; }
          .btn-pantone:not(:disabled):not(.disabled):active:focus, .btn-pantone:not(:disabled):not(.disabled).active:focus,
          .show > .btn-pantone.dropdown-toggle:focus {
            box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5); }

body {
  font-family: 'Lato', sans-serif;
  color: white;
  opacity: 1;
  font-weight: bold;
}

h7 {
  font-size: 16px;
  font-weight: bold;
}

.jumbotron {
    border-radius: 0 !important;
    margin-bottom: 0;
}

#main{
  max-width: 100%;
  background: -webkit-gradient(linear, left center, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 1))),
  url('https://cdn.glitch.com/89557d53-bdf9-42eb-adfc-ed86e46978c4%2Fchelsea-london-phillips-779135-unsplash.jpg?1544697182195') no-repeat;
  /*background-image: url("https://cdn.glitch.com/89557d53-bdf9-42eb-adfc-ed86e46978c4%2Fchelsea-london-phillips-779135-unsplash.jpg?1544697182195");*/
  background-size: cover;
  background-position: 0% 40%;
  display: block;
  background-repeat: no-repeat;
  color: white;
}

#blog {
  max-width: 100%;
  min-height: 800px;
  background-image: url("https://cdn.glitch.com/89557d53-bdf9-42eb-adfc-ed86e46978c4%2Frobert-bye-319816-unsplash%20(1).jpg?1545734215201");
  background-size: cover;
  background-position: 0% 15%;
  display: block;
  background-repeat: no-repeat;
  color: white;
}

.navbar {
  top: 0;
  left: 0;
  width: 100%;
  position: fixed;
  z-index: 5;
}

.bg-white {
  background-color: white;
  display: cover;
}

.navbar-dark .navbar-toggler-icon {
  background-image: url("https://cdn.glitch.com/89557d53-bdf9-42eb-adfc-ed86e46978c4%2Fbaseline_menu_white_18dp.png?1544872354817");
}

.paypal-invert {
  filter: invert(100%);
  z-index: 20;
}


.navbar-expand-sm .nav-item a {
  padding-top: 48px;
}

@media (max-width: 575.98px) {
  .navbar-collapse .nav-item a {
  text-align: right;
  padding-top: 0px;
}
  .headline h7 {
    font-size: 80px;
  }

  }


/*
.navbar-collapse a {
  text-align: right;
  padding-top: 0px;
}*/

.navbar-brand img {
  width: 100px;
  height: 100px;
}


.navbar-toggler, .navbar-toggler:hover, .navbar-toggler:active {
  border: none;
  padding: 0;
  margin: 0;
  outline: none !important;
  margin-top: 40px;
}

.nav-item .dropdown-item {
  color: #FF6F61 !important;
  padding-top: 0px !important;
}

/* .container {
  width: 50%;
  height: 200px;
  overflow: hidden;
}

.container img {
  max-width: 100%;
  height: auto;
  display: block;
} */

.nav-item .dropdown-item img {
  color: #FF6F61 !important;
  padding-right: 10px;
}

.dropdown-menu a {
  width: 50%;
  padding-right: 10px;
  justify-content: flex-end;
}

h7 {
  font-size: 100px;
  letter-spacing: 0.5rem;
}

h1 {
  letter-spacing: 0.5rem;
  font-weight: bold;
}

h4 {
  letter-spacing: 0.25rem;
}

#mainheadline {
  padding-top: 300px;
/*  padding-bottom: 200px; */
  text-align: center;
  text-shadow: 2px 2px black;
}

.ghost {
  visibility: hidden;
}

@media (min-width: 575.99px) { #nayacatext{display: none;} }
@media (max-width: 575.98px) {
#mainheadline {
  font-size: 5em;
  padding-top: 100px;
  line-height: 1;
}
#nayacatext{display: inline-block; text-transform: uppercase;}
#nayacalogo{display: none;}
}

#blogheadline {
  padding-top: 400px;
  text-align: center;
  text-shadow: 2px 2px black;
}

.efs {
  margin-top: -top: 50px;
  margin-bottom: 50px;
  text-align: center;
  letter-spacing: 0.1rem;
  word-spacing: 0.25rem;
  line-height: 1.5;
  font-weight: bold;
  color: white;
}



.efs img {
  filter: invert(100%);
  text-shadow: 2px 2px black;
}
/*
.col-sm {
     text-align: center;
} */

.gotoresume {
  text-align: center;
  letter-spacing: 0.1rem;
  word-spacing: 0.25rem;
  font-weight: bold;
  color: white;
  margin: 100px auto 200px auto;
}

#urch {
  letter-spacing: 0.1rem;
  word-spacing: 0.25rem;
  font-weight: bold;
}

/* #resume-icon {
  padding-bottom: 50px;
} */

.resumesheadline {
  margin-bottom: 50px;
  text-align: center;
  letter-spacing: 0.1rem;
  word-spacing: 0.25rem;
  line-height: 1.5;
  font-weight: bold;
  color: black;
}

.resumebox {
  padding: 20px;
  border: 3px solid black;
  border-radius: 10px;
  margin: 20px;
  color: black;
}

.resumebox span {
  display: inline-block;
}

.resumebox h5 {
  font-weight: bold;
}

.resumebox p {
  line-height: 1.5;
}

.blogbox {
  padding: 20px;
  border: 3px solid black;
  border-radius: 10px;
  margin: 20px;
  color: black;
}

.latestblogbox {
  padding: 20px;
  border: 3px solid black;
  border-radius: 10px;
  margin: 20px;
  color: black;
  background-color: white;
}

.blogbox h6, .latestblogbox h6 {
  color: #FF6F61;
  text-align: right;
}

.flex-item {
  display: flex;
  justify-content: space-between;
}

.nayacaprint {
  text-align: left;
}

.btn-lg span img {
  padding-right: 10px;
}

#resumes {
  padding-top: 50px;
  margin-top: -50px;
  color: white;
  text-align: center;
}

/* #resume-image {
  margin-top: 50px;
  margin-bottom: 50px;
} */

.resumes h4 {
  padding: 20px 0px;
  text-align: center;
  color: black;
  font-weight: bold;
  letter-spacing: 0.25rem;
}

.resumes h5 {
  padding-bottom: 20px;;
  text-align: center;
  color: black;
  letter-spacing: 0.25rem;
}

.resumes h3 {
  margin: 20px 0px 10px 0px;;
  text-align: center;
  color: black;
}


.col .footer {
  margin-top: 10px;
  margin-bottom: 10px;
  text-align: center;
}

.footer {
  background-color: black;
  margin-top: 0;
  text-align: center;
}

.footerbox {
  margin: auto auto 10px auto;
}

.footer p {
  line-height: normal;
  font-weight: normal;
  font-size: 10px;
  margin: 0;
  padding: 0;
}

.footer a {
  color: white;
  text-decoration: none;
}

.footer img {
  text-align: center;
}

/* #genresume { background-color: #5fff2b !important; } */

#resumenav {
  color: black;
}

